Update Google site verification and add favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!-- Google Search Console Verifizierung -->
-    <meta name="google-site-verification" content="DEIN_GOOGLE_CODE_HIER">
+    <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
 
     <!-- SEO -->
     <title>RedJgames – Free Browser Games</title>
@@ -12,8 +12,11 @@
     <meta name="keywords" content="RedJgames, Games, Free Games, Browser Games, Online Games">
     <meta name="robots" content="index, follow">
 
-    <!-- Canonical (wichtig für SEO bei Weiterleitung) -->
+    <!-- Canonical -->
     <link rel="canonical" href="https://redjgames.base44.app">
+
+    <!-- Favicon (main.jpg im selben Ordner) -->
+    <link rel="icon" href="main.jpg" type="image/jpeg">
 
     <!-- JavaScript Weiterleitung -->
     <script>
