Add Bing Webmaster Tools verification meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!-- Google Search Console Verifizierung -->
     <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
 
+    <!-- Bing Webmaster Tools Verifizierung -->
+    <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
+
     <!-- SEO -->
     <title>RedJgames – Free Browser Games</title>
     <meta name="description" content="RedJgames bietet kostenlose Browser Games. Spiele Free Games direkt im Browser.">
