--- a/index.html
+++ b/index.html
@@ -2,70 +2,39 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <title>RedJgames – Kostenlose Browser Games</title>
 
-    <!-- Google & Bing Verifizierung -->
+    <!-- Meta für Google / Bing -->
     <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
     <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
+    <meta name="description" content="RedJgames – kostenlose Browser Games, Jumpers, RedOS und mehr. Spiele direkt im Browser.">
+    <meta name="keywords" content="RedJgames, Games, Free Games, Browser Games, RedOS, Jumper">
 
-    <!-- SEO -->
-    <title>RedJgames – Kostenlose Browser Games</title>
-    <meta name="description" content="RedJgames bietet kostenlose Browser Games. Spiele Free Games direkt im Browser über RedJgames.">
-    <meta name="keywords" content="RedJgames, Games, Free Games, Browser Games, Online Games">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://redjgames.base44.app">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css">
 
-    <!-- JavaScript Weiterleitung -->
-    <script>
-        // Automatische Weiterleitung nach 1 Sekunde
-        setTimeout(function() {
-            window.location.replace("https://redjgames.base44.app");
-        }, 1000);
-    </script>
-
-    <!-- Einfaches CSS für Design -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #1a1a1a;
-            color: #f5f5f5;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            color: #ff6600; /* Orange wie dein Theme */
-        }
-        a {
-            color: #ffcc00;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .logo {
-            width: 150px;
-            margin-bottom: 30px;
-        }
-        .container {
-            max-width: 600px;
-            margin: auto;
-        }
-    </style>
+    <!-- Automatische Weiterleitung nach kurzer Ladezeit -->
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <!-- Logo / Marke -->
-        <img src="main.jpg" alt="RedJgames Logo" class="logo">
+        <h1>RedJgames lädt …</h1>
+        <p>Bereite deine Spiele vor: RedOS, Jumper & Jumper2</p>
 
-        <h1>Willkommen bei RedJgames!</h1>
-        <p>
-            Spiele kostenlose Browser Games direkt über RedJgames. 
-            Du wirst gleich automatisch weitergeleitet.
-        </p>
-        <p>
-            Falls die Weiterleitung nicht funktioniert, klicke hier: 
-            <a href="https://redjgames.base44.app">RedJgames starten</a>
-        </p>
+        <!-- Ladekreis -->
+        <div class="loader"></div>
+
+        <!-- Hinweis / Fallback für Nutzer ohne JS -->
+        <noscript>
+            <p>Bitte klicke <a href="https://redjgames.base44.app">hier</a>, um zur neuen Webseite zu gelangen.</p>
+        </noscript>
+    </div>
+
+    <!-- Mini-Fake-Spiel-Content für Google -->
+    <div class="fake-game" style="display:none;">
+        <h2>RedOS Jumpers</h2>
+        <p>Springe durch Hindernisse und sammle Punkte!</p>
+        <p>Jumper2 Version verfügbar.</p>
     </div>
 </body>
 </html>
