index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <title>RedJgames – Kostenlose Browser Games</title>
 
-    <!-- Meta für Google / Bing -->
+    <!-- Google / Bing Verifizierung -->
     <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
     <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
-    <meta name="description" content="RedJgames – kostenlose Browser Games, Jumpers, RedOS und mehr. Spiele direkt im Browser.">
-    <meta name="keywords" content="RedJgames, Games, Free Games, Browser Games, RedOS, Jumper">
+
+    <!-- SEO -->
+    <meta name="description" content="RedJgames – Kostenlose Browser Games direkt im Browser. Spiele RedOS, Jumper, Jumper2 und weitere Spiele.">
+    <meta name="keywords" content="RedJgames, Free Games, Browser Games, RedOS, Jumper, Jumper2, Online Games, Spiele, Portfolio, Home, Bilder">
+    <meta name="robots" content="index, follow">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Automatische Weiterleitung nach kurzer Ladezeit -->
+    <!-- JS für Weiterleitung -->
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -21,20 +24,37 @@
         <h1>RedJgames lädt …</h1>
         <p>Bereite deine Spiele vor: RedOS, Jumper & Jumper2</p>
 
-        <!-- Ladekreis -->
+        <!-- Großer Ladekreis -->
         <div class="loader"></div>
 
-        <!-- Hinweis / Fallback für Nutzer ohne JS -->
+        <!-- Fallback -->
         <noscript>
-            <p>Bitte klicke <a href="https://redjgames.base44.app">hier</a>, um zur neuen Webseite zu gelangen.</p>
+            <p>Klicke hier, um zur neuen Webseite zu gelangen: <a href="https://redjgames.base44.app">Neue Webseite starten</a></p>
         </noscript>
     </div>
 
-    <!-- Mini-Fake-Spiel-Content für Google -->
-    <div class="fake-game" style="display:none;">
-        <h2>RedOS Jumpers</h2>
-        <p>Springe durch Hindernisse und sammle Punkte!</p>
-        <p>Jumper2 Version verfügbar.</p>
+    <!-- Fake-Content für Google (nicht sichtbar für Nutzer) -->
+    <div class="fake-content" style="display:none;">
+        <h2>RedJgames Browser Games</h2>
+        <p>Spiele RedOS, Jumper, Jumper2 und viele weitere Free Games direkt im Browser.</p>
+
+        <h3>Home</h3>
+        <p>Willkommen bei RedJgames – entdecke neue Spiele, Updates und Tipps!</p>
+
+        <h3>Portfolio</h3>
+        <p>Hier zeigen wir unsere beliebtesten Spiele und Projekte.</p>
+
+        <h3>Bilder</h3>
+        <p>Beispiele von RedJgames-Inhalten:</p>
+        <img src="main.jpg" alt="RedJgames Logo" style="width:400px; height:auto;">
+
+        <ul>
+            <li>RedOS – Klassiker Jump & Run</li>
+            <li>Jumper – springe durch die Level</li>
+            <li>Jumper2 – neue Version mit Extra-Herausforderungen</li>
+        </ul>
+
+        <p>Weitere Browser Games werden regelmäßig hinzugefügt!</p>
     </div>
 </body>
 </html>
