--- a/index.html
+++ b/index.html
@@ -4,52 +4,98 @@
     <meta charset="UTF-8">
     <title>RedJgames – Browser Games</title>
 
-    <!-- Google / Bing Verifizierung -->
+    <!-- Verifizierung -->
     <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
     <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
 
     <!-- SEO -->
-    <meta name="description" content="RedJgames – Kostenlose Browser Games. Spiele RedOS, Jumper, Jumper2 direkt im Browser. Home, Portfolio und Bilder inklusive.">
+    <meta name="description" content="RedJgames – Kostenlose Browser Games. Spiele RedOS, Jumper, Jumper2 und weitere Spiele. Home, Portfolio und Bilder inklusive.">
     <meta name="keywords" content="RedJgames, Free Games, Browser Games, RedOS, Jumper, Jumper2, Portfolio, Home, Bilder">
     <meta name="robots" content="index, follow">
 
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Nur Ladekreis für Nutzer -->
+    <!-- Ladekreis für Nutzer -->
     <div class="loader-container">
         <div class="loader"></div>
     </div>
 
-    <!-- Fake-Content für Google (unsichtbar für Nutzer) -->
-    <div class="fake-content" style="display:none;">
+    <!-- Fake Content für Google -->
+    <div class="fake-content">
         <h1>RedJgames – Kostenlose Browser Games</h1>
-        <p>Spiele RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
-
+        <p>Willkommen auf der offiziellen RedJgames Website. Hier findest du RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
+        
         <h2>Home</h2>
-        <p>Willkommen bei RedJgames – entdecke neue Spiele und Updates.</p>
+        <p>Entdecke unsere neuesten Spiele, Updates und Tipps.</p>
+        <p>Wir aktualisieren regelmäßig unsere Inhalte, damit du immer die neuesten Spiele spielen kannst.</p>
 
         <h2>Portfolio</h2>
-        <p>Unsere beliebtesten Spiele und Projekte im Überblick.</p>
+        <p>Unsere beliebtesten Projekte:</p>
+        <ul>
+            <li>RedOS – Jump & Run Klassiker</li>
+            <li>Jumper – Springe durch Levels</li>
+            <li>Jumper2 – Neue Version mit Extras</li>
+            <li>RedOS Challenge – Tägliche Aufgaben</li>
+            <li>MiniGames Collection – Verschiedene kleine Spiele</li>
+        </ul>
 
         <h2>Bilder</h2>
-        <img src="main.jpg" alt="RedJgames Logo" style="width:400px; height:auto;">
+        <p>Einige Beispielbilder unserer Projekte:</p>
+        <img src="main.jpg" alt="RedJgames Logo" style="width:400px; height:auto; margin:10px 0;">
 
-        <ul>
-            <li>RedOS – Klassiker Jump & Run</li>
-            <li>Jumper – springe durch die Level</li>
-            <li>Jumper2 – neue Version mit Extra-Herausforderungen</li>
-        </ul>
-        <p>Weitere Browser Games werden regelmäßig hinzugefügt!</p>
+        <h2>Spiele Übersicht</h2>
+        <p>Hier ist eine Übersicht aller Spiele:</p>
+        <ol>
+            <li>RedOS – Jump & Run</li>
+            <li>Jumper – Springe und sammle Punkte</li>
+            <li>Jumper2 – Neue Levels & Herausforderungen</li>
+            <li>RedOS Challenge – Zeitlich begrenzte Levels</li>
+            <li>MiniGames Collection – Verschiedene kleine Spiele</li>
+            <li>Arcade Fun – Schnelle Action</li>
+            <li>Puzzle Mania – Denkspiele</li>
+            <li>Adventure Quest – Abenteuer Spiel</li>
+            <li>Memory Master – Merkspiele</li>
+            <li>Skill Runner – Reaktionsspiele</li>
+            <!-- Wiederholen wir einfach, um auf ~100 Zeilen zu kommen -->
+        </ol>
+
+        <!-- Wiederholung bis ca. 100 Zeilen für Google Index -->
+        <p>Spiele unsere Klassiker immer wieder und entdecke neue Level. RedJgames bietet kostenlosen Browser-Gaming-Spaß für alle Altersgruppen.</p>
+        <p>Alle Spiele sind direkt im Browser spielbar – keine Installation notwendig.</p>
+        <p>Unsere Portfolio-Seiten zeigen detailliert jedes Projekt.</p>
+        <p>Weitere Spiele wie RedOS Challenge, Jumper2 und MiniGames Collection sind täglich verfügbar.</p>
+        <p>RedJgames ist die Plattform für kostenlose Online-Spiele.</p>
+        <p>Unser Ziel: Spaßige Spiele für Browser-Gamer.</p>
+        <p>Unsere Home-Seite enthält Updates, Tipps und Tricks.</p>
+        <p>Portfolio zeigt unsere beliebtesten Projekte und Screenshots.</p>
+        <p>Bilder zeigen Screenshots von Spielen und Projekt-Logos.</p>
+        <p>Entdecke neue Spiele wie RedOS und Jumper direkt hier.</p>
+        <p>RedJgames bleibt immer aktuell mit neuen Inhalten.</p>
+        <p>Weitere Details zu unseren Spielen findest du hier.</p>
+        <p>RedJgames bietet Browser-Games für Anfänger und Profis.</p>
+        <p>Jumper2 bietet zusätzliche Levels und Herausforderungen.</p>
+        <p>MiniGames Collection enthält kleine Spiele für zwischendurch.</p>
+        <p>Unsere Plattform unterstützt alle gängigen Browser.</p>
+        <p>RedJgames legt Wert auf Geschwindigkeit und einfache Bedienung.</p>
+        <p>Entdecke Arcade Fun, Puzzle Mania und Adventure Quest.</p>
+        <p>Memory Master und Skill Runner sind kleine, spaßige Spiele.</p>
+        <p>RedJgames bringt regelmäßig neue Updates und Features.</p>
+        <p>Alle Spiele sind kostenlos zugänglich.</p>
+        <p>Portfolio enthält Screenshots, Logos und Gameplay-Beispiele.</p>
+        <p>Unsere Home-Seite zeigt aktuelle News und Highlights.</p>
+        <p>Bilder zeigen Projekt-Beispiele, Spielfiguren und Level-Designs.</p>
+        <p>Google kann so die Seite als relevante, umfangreiche Website erkennen.</p>
+        <p>SEO-relevante Inhalte sind in den unsichtbaren Texten enthalten.</p>
     </div>
 
-    <!-- Weiterleitung nach kurzer Zeit -->
     <script>
+        // Sofortige Weiterleitung nach kurzer Ladezeit
         window.addEventListener('load', () => {
-            // 2 Sekunden Ladezeit, dann weiterleiten
             setTimeout(() => {
                 window.location.replace("https://redjgames.base44.app");
-            }, 2000);
+            }, 2000); // 2 Sekunden
         });
     </script>
 </body>
