index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -1,102 +1,54 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>RedJgames – Browser Games</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>RedJgames – Browser Games</title>
 
-    <!-- Verifizierung -->
-    <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
-    <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
+<!-- Google & Bing Verifizierung -->
+<meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
+<meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
 
-    <!-- SEO -->
-    <meta name="description" content="RedJgames – Kostenlose Browser Games. Spiele RedOS, Jumper, Jumper2 und weitere Spiele. Home, Portfolio und Bilder inklusive.">
-    <meta name="keywords" content="RedJgames, Free Games, Browser Games, RedOS, Jumper, Jumper2, Portfolio, Home, Bilder">
-    <meta name="robots" content="index, follow">
+<!-- SEO -->
+<meta name="description" content="RedJgames – Kostenlose Browser Games. Spiele RedOS, Jumper, Jumper2 und weitere Spiele. Home, Portfolio, Bilder.">
+<meta name="keywords" content="RedJgames, Free Games, Browser Games, RedOS, Jumper, Jumper2, Portfolio, Home, Bilder">
+<meta name="robots" content="index, follow">
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
+
+<!-- Sofortige Weiterleitung -->
+<script>
+window.location.replace("https://redjgames.base44.app");
+</script>
 </head>
 <body>
-    <!-- Ladekreis für Nutzer -->
-    <div class="loader-container">
-        <div class="loader"></div>
-    </div>
+<!-- Lade-Kreis -->
+<div class="loader-container">
+    <div class="loader"></div>
+</div>
 
-    <!-- Fake Content für Google -->
-    <div class="fake-content">
-        <h1>RedJgames – Kostenlose Browser Games</h1>
-        <p>Willkommen auf der offiziellen RedJgames Website. Hier findest du RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
-        
-        <h2>Home</h2>
-        <p>Entdecke unsere neuesten Spiele, Updates und Tipps.</p>
-        <p>Wir aktualisieren regelmäßig unsere Inhalte, damit du immer die neuesten Spiele spielen kannst.</p>
+<!-- SEO-Content für Google/Bing, unsichtbar -->
+<div class="seo-content" style="display:none;">
+<h1>RedJgames – Browser Games Online</h1>
+<p>Willkommen bei RedJgames, entdecke RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
 
-        <h2>Portfolio</h2>
-        <p>Unsere beliebtesten Projekte:</p>
-        <ul>
-            <li>RedOS – Jump & Run Klassiker</li>
-            <li>Jumper – Springe durch Levels</li>
-            <li>Jumper2 – Neue Version mit Extras</li>
-            <li>RedOS Challenge – Tägliche Aufgaben</li>
-            <li>MiniGames Collection – Verschiedene kleine Spiele</li>
-        </ul>
-
-        <h2>Bilder</h2>
-        <p>Einige Beispielbilder unserer Projekte:</p>
-        <img src="main.jpg" alt="RedJgames Logo" style="width:400px; height:auto; margin:10px 0;">
-
-        <h2>Spiele Übersicht</h2>
-        <p>Hier ist eine Übersicht aller Spiele:</p>
-        <ol>
-            <li>RedOS – Jump & Run</li>
-            <li>Jumper – Springe und sammle Punkte</li>
-            <li>Jumper2 – Neue Levels & Herausforderungen</li>
-            <li>RedOS Challenge – Zeitlich begrenzte Levels</li>
-            <li>MiniGames Collection – Verschiedene kleine Spiele</li>
-            <li>Arcade Fun – Schnelle Action</li>
-            <li>Puzzle Mania – Denkspiele</li>
-            <li>Adventure Quest – Abenteuer Spiel</li>
-            <li>Memory Master – Merkspiele</li>
-            <li>Skill Runner – Reaktionsspiele</li>
-            <!-- Wiederholen wir einfach, um auf ~100 Zeilen zu kommen -->
-        </ol>
-
-        <!-- Wiederholung bis ca. 100 Zeilen für Google Index -->
-        <p>Spiele unsere Klassiker immer wieder und entdecke neue Level. RedJgames bietet kostenlosen Browser-Gaming-Spaß für alle Altersgruppen.</p>
-        <p>Alle Spiele sind direkt im Browser spielbar – keine Installation notwendig.</p>
-        <p>Unsere Portfolio-Seiten zeigen detailliert jedes Projekt.</p>
-        <p>Weitere Spiele wie RedOS Challenge, Jumper2 und MiniGames Collection sind täglich verfügbar.</p>
-        <p>RedJgames ist die Plattform für kostenlose Online-Spiele.</p>
-        <p>Unser Ziel: Spaßige Spiele für Browser-Gamer.</p>
-        <p>Unsere Home-Seite enthält Updates, Tipps und Tricks.</p>
-        <p>Portfolio zeigt unsere beliebtesten Projekte und Screenshots.</p>
-        <p>Bilder zeigen Screenshots von Spielen und Projekt-Logos.</p>
-        <p>Entdecke neue Spiele wie RedOS und Jumper direkt hier.</p>
-        <p>RedJgames bleibt immer aktuell mit neuen Inhalten.</p>
-        <p>Weitere Details zu unseren Spielen findest du hier.</p>
-        <p>RedJgames bietet Browser-Games für Anfänger und Profis.</p>
-        <p>Jumper2 bietet zusätzliche Levels und Herausforderungen.</p>
-        <p>MiniGames Collection enthält kleine Spiele für zwischendurch.</p>
-        <p>Unsere Plattform unterstützt alle gängigen Browser.</p>
-        <p>RedJgames legt Wert auf Geschwindigkeit und einfache Bedienung.</p>
-        <p>Entdecke Arcade Fun, Puzzle Mania und Adventure Quest.</p>
-        <p>Memory Master und Skill Runner sind kleine, spaßige Spiele.</p>
-        <p>RedJgames bringt regelmäßig neue Updates und Features.</p>
-        <p>Alle Spiele sind kostenlos zugänglich.</p>
-        <p>Portfolio enthält Screenshots, Logos und Gameplay-Beispiele.</p>
-        <p>Unsere Home-Seite zeigt aktuelle News und Highlights.</p>
-        <p>Bilder zeigen Projekt-Beispiele, Spielfiguren und Level-Designs.</p>
-        <p>Google kann so die Seite als relevante, umfangreiche Website erkennen.</p>
-        <p>SEO-relevante Inhalte sind in den unsichtbaren Texten enthalten.</p>
-    </div>
-
-    <script>
-        // Sofortige Weiterleitung nach kurzer Ladezeit
-        window.addEventListener('load', () => {
-            setTimeout(() => {
-                window.location.replace("https://redjgames.base44.app");
-            }, 2000); // 2 Sekunden
-        });
-    </script>
+<h2>Home</h2>
+<p>Alle Neuigkeiten, Updates und Tipps findest du hier.</p>
+<p>Weitere Inhalte für Spieler aller Altersgruppen.</p>
+<p>Unsere Spiele sind kostenlos und direkt im Browser spielbar.</p>
+<p>Jumper und Jumper2 bieten actionreiche Levels.</p>
+<p>RedOS Klassiker – Jump & Run Erfahrung.</p>
+<p>MiniGames Collection – kleine schnelle Spiele.</p>
+<p>Arcade Fun – schnelle Action Levels.</p>
+<p>Puzzle Mania – Denkspiele und Rätsel.</p>
+<p>Adventure Quest – Abenteuer für alle Spieler.</p>
+<p>Memory Master – Merkspiele und Geschicklichkeitsspiele.</p>
+<p>Skill Runner – Reaktionsspiele und Highscore Levels.</p>
+<p>Portfolio zeigt Screenshots, Logos und Gameplay Beispiele.</p>
+<p>Bildergalerie zeigt Logos, Screenshots und Leveldesigns.</p>
+<p>SEO-relevante Inhalte für Google/Bing Indexierung.</p>
+<p>Weitere Spiele: RedOS Challenge, MiniGames Collection, Arcade Fun, Puzzle Mania, Adventure Quest, Memory Master, Skill Runner.</p>
+<p>Meta-Tags für Google & Bing hinzugefügt.</p>
+</div>
 </body>
 </html>
