--- a/index.html
+++ b/index.html
@@ -18,40 +18,33 @@
 
 <!-- Zufällige Weiterleitung zwischen 0 und 2 Sekunden -->
 <script>
-  const delay = Math.random() * 2000; // 0 bis 2000 ms
+  const delay = Math.random() * 2000;
   setTimeout(() => {
     window.location.replace("https://redjgames.base44.app");
   }, delay);
 </script>
 </head>
 <body>
-<!-- Lade-Kreis -->
+<!-- Neuer Ladekreis -->
 <div class="loader-container">
-    <div class="loader"></div>
+  <div class="loader">
+    <div class="segment segment1"></div>
+    <div class="segment segment2"></div>
+    <div class="segment segment3"></div>
+    <div class="segment segment4"></div>
+  </div>
 </div>
 
-<!-- SEO-Content für Google/Bing, unsichtbar -->
+<!-- SEO-Content unsichtbar für Google/Bing -->
 <div class="seo-content" style="display:none;">
 <h1>RedJgames – Browser Games Online</h1>
 <p>Willkommen bei RedJgames, entdecke RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
-
 <h2>Home</h2>
 <p>Alle Neuigkeiten, Updates und Tipps findest du hier.</p>
-<p>Weitere Inhalte für Spieler aller Altersgruppen.</p>
-<p>Unsere Spiele sind kostenlos und direkt im Browser spielbar.</p>
-<p>Jumper und Jumper2 bieten actionreiche Levels.</p>
-<p>RedOS Klassiker – Jump & Run Erfahrung.</p>
-<p>MiniGames Collection – kleine schnelle Spiele.</p>
-<p>Arcade Fun – schnelle Action Levels.</p>
-<p>Puzzle Mania – Denkspiele und Rätsel.</p>
-<p>Adventure Quest – Abenteuer für alle Spieler.</p>
-<p>Memory Master – Merkspiele und Geschicklichkeitsspiele.</p>
-<p>Skill Runner – Reaktionsspiele und Highscore Levels.</p>
-<p>Portfolio zeigt Screenshots, Logos und Gameplay Beispiele.</p>
-<p>Bildergalerie zeigt Logos, Screenshots und Leveldesigns.</p>
-<p>SEO-relevante Inhalte für Google/Bing Indexierung.</p>
-<p>Weitere Spiele: RedOS Challenge, MiniGames Collection, Arcade Fun, Puzzle Mania, Adventure Quest, Memory Master, Skill Runner.</p>
-<p>Meta-Tags für Google & Bing hinzugefügt.</p>
+<h2>Portfolio</h2>
+<p>Unsere beliebtesten Spiele und Projekte: RedOS, Jumper, Jumper2, MiniGames Collection, Arcade Fun, Puzzle Mania.</p>
+<h2>Bilder</h2>
+<p>Beispiele: <img src="main.jpg" alt="RedJgames Logo" style="width:400px;height:auto;margin:10px 0;"></p>
 </div>
 </body>
 </html>
