--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <meta name="keywords" content="RedJgames, Free Games, Browser Games, RedOS, Jumper, Jumper2, Portfolio, Home, Bilder">
 <meta name="robots" content="index, follow">
 
+<!-- Favicon -->
+<link rel="icon" href="main.jpg" type="image/jpeg">
+
 <link rel="stylesheet" href="style.css">
 
 <!-- Zufällige Weiterleitung zwischen 0 und 2 Sekunden -->
@@ -25,26 +28,22 @@
 </script>
 </head>
 <body>
-<!-- Neuer Ladekreis -->
-<div class="loader-container">
-  <div class="loader">
-    <div class="segment segment1"></div>
-    <div class="segment segment2"></div>
-    <div class="segment segment3"></div>
-    <div class="segment segment4"></div>
-  </div>
+<!-- Pulsierendes main.jpg in der Mitte -->
+<div class="image-container">
+  <img src="main.jpg" alt="RedJgames Logo" class="pulsing-image">
 </div>
 
-<!-- SEO-Content unsichtbar für Google/Bing -->
+<!-- SEO-Content für Google/Bing unsichtbar -->
 <div class="seo-content" style="display:none;">
 <h1>RedJgames – Browser Games Online</h1>
-<p>Willkommen bei RedJgames, entdecke RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
+<p>Willkommen bei RedJgames! Entdecke RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
 <h2>Home</h2>
 <p>Alle Neuigkeiten, Updates und Tipps findest du hier.</p>
 <h2>Portfolio</h2>
 <p>Unsere beliebtesten Spiele und Projekte: RedOS, Jumper, Jumper2, MiniGames Collection, Arcade Fun, Puzzle Mania.</p>
 <h2>Bilder</h2>
-<p>Beispiele: <img src="main.jpg" alt="RedJgames Logo" style="width:400px;height:auto;margin:10px 0;"></p>
+<p>Beispiele: <img src="main.jpg" alt="RedJgames Logo"></p>
+<p>Weitere Inhalte für SEO: Home, Portfolio, Bilder, RedOS, Jumper, Jumper2, MiniGames, Arcade Fun, Puzzle Mania, Adventure Quest, Memory Master, Skill Runner.</p>
 </div>
 </body>
 </html>
