index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <meta name="robots" content="index, follow">
 
 <!-- Favicon -->
-<link rel="icon" href="main.jpg" type="image/jpeg">
+<link rel="icon" href="https://raw.githubusercontent.com/Redjul2110/RedJGames/refs/heads/main/main.jpg" type="image/jpeg">
 
 <link rel="stylesheet" href="style.css">
 
-<!-- Zufällige Weiterleitung zwischen 0 und 2 Sekunden -->
+<!-- Zufällige Weiterleitung zwischen 0 und 1 Sekunde -->
 <script>
-  const delay = Math.random() * 2000;
+  const delay = Math.random() * 1000;
   setTimeout(() => {
     window.location.replace("https://redjgames.base44.app");
   }, delay);
@@ -30,78 +30,19 @@
 <body>
 <!-- Pulsierendes Logo in der Mitte -->
 <div class="logo-container">
-  <img src="main.jpg" alt="RedJgames Logo" class="pulsing-logo">
+  <img src="https://raw.githubusercontent.com/Redjul2110/RedJGames/refs/heads/main/main.jpg" alt="RedJgames Logo" class="pulsing-logo">
 </div>
 
 <!-- SEO-Content unsichtbar -->
 <div class="seo-content" style="display:none;">
 <h1>RedJgames – Browser Games Online</h1>
-<p>Willkommen bei RedJgames! Entdecke RedOS, Jumper, Jumper2 und viele weitere Browser Games direkt im Browser.</p>
+<p>Willkommen bei RedJgames! Entdecke RedOS, Jumper, Jumper2 und weitere Browser Games.</p>
 <h2>Home</h2>
 <p>Alle Neuigkeiten, Updates und Tipps findest du hier.</p>
-<p>Weitere Inhalte für Spieler aller Altersgruppen.</p>
-<p>Unsere Spiele sind kostenlos und direkt im Browser spielbar.</p>
-<p>Jumper und Jumper2 bieten actionreiche Levels.</p>
-<p>RedOS Klassiker – Jump & Run Erfahrung.</p>
-<p>MiniGames Collection – kleine schnelle Spiele.</p>
-<p>Arcade Fun – schnelle Action Levels.</p>
-<p>Puzzle Mania – Denkspiele und Rätsel.</p>
-<p>Adventure Quest – Abenteuer für alle Spieler.</p>
-<p>Memory Master – Merkspiele und Geschicklichkeitsspiele.</p>
-<p>Skill Runner – Reaktionsspiele und Highscore Levels.</p>
-<p>Portfolio zeigt Screenshots, Logos und Gameplay Beispiele.</p>
-<p>Bildergalerie zeigt Logos, Screenshots und Leveldesigns.</p>
-<p>SEO-relevante Inhalte für Google/Bing Indexierung.</p>
-<p>Weitere Spiele: RedOS Challenge, MiniGames Collection, Arcade Fun, Puzzle Mania, Adventure Quest, Memory Master, Skill Runner.</p>
-<p>Meta-Tags für Google & Bing hinzugefügt.</p>
-<p>Home-Bereich enthält aktuelle News und Highlights.</p>
-<p>Portfolio zeigt beliebte Projekte und Leveldesigns.</p>
-<p>Bildergalerie enthält Logos, Screenshots, Leveldesigns.</p>
-<p>RedJgames bietet Spaß für alle Altersgruppen.</p>
-<p>Spiele können direkt im Browser gespielt werden.</p>
-<p>MiniGames Collection für kurze Spielpausen.</p>
-<p>Arcade Fun schnelle Arcade Action.</p>
-<p>Puzzle Mania Denkspiele und Rätselspaß.</p>
-<p>Adventure Quest Abenteuer für alle Altersgruppen.</p>
-<p>Memory Master trainiert Gedächtnis und Konzentration.</p>
-<p>Skill Runner schnelle Reaktionsspiele.</p>
-<p>RedOS Jump & Run Klassiker für Fans.</p>
-<p>Jumper und Jumper2 neue Level und Herausforderungen.</p>
-<p>RedOS Challenge tägliche Aufgaben und neue Inhalte.</p>
-<p>MiniGames Collection für kurze Pausen und Fun.</p>
-<p>Arcade Fun schnelle Action Levels.</p>
-<p>Puzzle Mania Denk- und Rätselspiele.</p>
-<p>Adventure Quest Abenteuer für alle Spieler.</p>
-<p>Memory Master trainiert Gedächtnis und Konzentration.</p>
-<p>Skill Runner schnelle Reaktionsspiele.</p>
-<p>SEO Content dient der Indexierung für Google/Bing.</p>
-<p>Meta-Tags korrekt eingebunden für maximale Sichtbarkeit.</p>
-<p>Favicon zeigt dein Logo im Tab und in Google.</p>
-<p>Alles ist responsive und modern gestaltet.</p>
-<p>Die Seite lädt das Logo sofort.</p>
-<p>Animation sorgt für Aufmerksamkeit beim Nutzer.</p>
-<p>Farbe und Stil sind für Branding optimiert.</p>
-<p>Hintergrund schwarz, Logo in der Mitte pulsiert.</p>
-<p>Zufällige Weiterleitung zwischen 0–2 Sekunden.</p>
-<p>Weitere Inhalte für SEO unsichtbar.</p>
-<p>RedJgames Plattform regelmäßig aktualisiert.</p>
-<p>Neue Spiele und Updates werden hinzugefügt.</p>
-<p>SEO-Content enthält Home, Portfolio, Bilder, Spiele, MiniGames, Arcade Fun, Puzzle Mania, Adventure Quest, Memory Master, Skill Runner.</p>
-<p>Logo bleibt im Fokus, Ladezeit minimal.</p>
-<p>Seite ist für Desktop und Mobile optimiert.</p>
-<p>Alle Elemente sind zentriert.</p>
-<p>Animation leicht und flüssig.</p>
-<p>Glow Effekt kann optional hinzugefügt werden.</p>
-<p>Indexierung für Suchmaschinen wird unterstützt.</p>
-<p>Die Seite ist sauber strukturiert und minimalistisch.</p>
-<p>Keine unnötigen Elemente für Nutzer sichtbar.</p>
-<p>Nur Logo pulsiert im schwarzen Hintergrund.</p>
-<p>Google sieht den SEO-Content.</p>
-<p>Bing sieht denselben SEO-Content.</p>
-<p>Alle Meta-Tags korrekt eingebunden.</p>
-<p>Seite schnell und performant.</p>
-<p>Design modern und clean.</p>
-<p>Favicon für Tab und Suchergebnis sichtbar.</p>
+<h2>Portfolio</h2>
+<p>Beliebte Spiele: RedOS, Jumper, Jumper2, MiniGames, Arcade Fun, Puzzle Mania.</p>
+<h2>Bilder</h2>
+<p>Beispiele: <img src="https://raw.githubusercontent.com/Redjul2110/RedJGames/refs/heads/main/main.jpg" alt="RedJgames Logo"></p>
 </div>
 </body>
 </html>
