index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 <!-- Pulsierendes Logo in der Mitte -->
 <div class="logo-container">
-  <img src="https://raw.githubusercontent.com/Redjul2110/RedJGames/main/main.jpg" alt="RedJgames Logo" class="pulsing-logo">
+  <img src="main.jpg" alt="RedJgames Logo" class="pulsing-logo">
 </div>
 
 <!-- SEO-Content unsichtbar -->
