--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="robots" content="index, follow">
 
 <!-- Favicon -->
-<link rel="icon" href="https://raw.githubusercontent.com/Redjul2110/RedJGames/main/main.jpg" type="image/jpeg">
+<link rel="icon" href="main.jpg" type="image/jpeg">
 
 <link rel="stylesheet" href="style.css">
 
@@ -30,7 +30,7 @@
 <body>
 <!-- Pulsierendes Logo in der Mitte -->
 <div class="logo-container">
-  <img src="main.jpg" alt="RedJgames Logo" class="pulsing-logo">
+  <img src="main.jpg" type="image/jpeg" alt="RedJgames Logo" class="pulsing-logo">
 </div>
 
 <!-- SEO-Content unsichtbar -->
