index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 <!-- Pulsierendes Logo in der Mitte -->
 <div class="logo-container">
-  <img src="main.jpg" type="image/jpeg" alt="RedJgames Logo" class="pulsing-logo">
+  <img src="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/697dba227d7b4781c9ad534c/610a0795d_CF48BBBC-A2B5-45D7-8979-97F559347058.png" type="image/jpeg" alt="RedJgames Logo" class="pulsing-logo">
 </div>
 
 <!-- SEO-Content unsichtbar -->
