Refactor index.html for improved SEO and favicon

--- a/index.html
+++ b/index.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RedJgames – Browser Games</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RedJgames – Browser Games</title>
 
-<!-- Google & Bing Verifizierung -->
-<meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
-<meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
+  <!-- Google & Bing Verifizierung -->
+  <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
+  <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
 
-<!-- SEO -->
-<meta name="description" content="RedJgames – Kostenlose Browser Games. Spiele RedOS, Jumper, Jumper2 und weitere Spiele. Home, Portfolio, Bilder.">
-<meta name="keywords" content="RedJgames, Free Games, Browser Games, RedOS, Jumper, Jumper2, Portfolio, Home, Bilder">
-<meta name="robots" content="index, follow">
+  <!-- SEO -->
+  <meta name="description" content="RedJgames – Kostenlose Browser Games und Online Games.">
+  <meta name="keywords" content="RedJgames, Free Games, Browser Games, Online Games">
+  <meta name="robots" content="index, follow">
 
-<!-- Favicon -->
-<link rel="icon" href="main.jpg" type="image/jpeg">
+  <!-- Favicon -->
+  <link rel="icon" href="https://raw.githubusercontent.com/Redjul2110/RedJGames/main/main.jpg" type="image/jpeg">
 
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 
-<!-- Zufällige Weiterleitung zwischen 0 und 1 Sekunde -->
-<script>
-  const delay = Math.random() * 1000;
-  setTimeout(() => {
-    window.location.replace("https://redjgames.base44.app");
-  }, delay);
-</script>
+  <!-- Zufällige Weiterleitung 0–1 Sekunde -->
+  <script>
+    const delay = Math.random() * 1000;
+    setTimeout(() => {
+      window.location.replace("https://redjgames.base44.app/");
+    }, delay);
+  </script>
 </head>
 <body>
-<!-- Pulsierendes Logo in der Mitte -->
-<div class="logo-container">
-  <img src="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/697dba227d7b4781c9ad534c/610a0795d_CF48BBBC-A2B5-45D7-8979-97F559347058.png" type="image/jpeg" alt="RedJgames Logo" class="pulsing-logo">
-</div>
 
-<!-- SEO-Content unsichtbar -->
-<div class="seo-content" style="display:none;">
-<h1>RedJgames – Browser Games Online</h1>
-<p>Willkommen bei RedJgames! Entdecke RedOS, Jumper, Jumper2 und weitere Browser Games.</p>
-<h2>Home</h2>
-<p>Alle Neuigkeiten, Updates und Tipps findest du hier.</p>
-<h2>Portfolio</h2>
-<p>Beliebte Spiele: RedOS, Jumper, Jumper2, MiniGames, Arcade Fun, Puzzle Mania.</p>
-<h2>Bilder</h2>
-<p>Beispiele: <img src="https://raw.githubusercontent.com/Redjul2110/RedJGames/main/main.jpg" alt="RedJgames Logo"></p>
-</div>
+  <!-- Lade-Kreis -->
+  <div class="loader"></div>
+
+  <!-- Unsichtbarer SEO-Content -->
+  <div class="seo-content">
+    <h1>RedJgames</h1>
+    <p>RedJgames bietet kostenlose Browser Games wie RedOS, Jumper und Jumper2.</p>
+  </div>
+
 </body>
 </html>
