Enhance SEO content with download links for games
Added download links for various games in SEO content.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- SEO -->
   <meta name="description" content="RedJgames – Kostenlose Browser Games und Online Games.">
-  <meta name="keywords" content="RedJgames, Free Games, Browser Games, Online Games">
+  <meta name="keywords" content="RedJgames, Free Games, Browser Games, Online Games, Games">
   <meta name="robots" content="index, follow">
 
   <!-- Favicon -->
@@ -36,6 +36,39 @@
   <div class="seo-content">
     <h1>RedJgames</h1>
     <p>RedJgames bietet kostenlose Browser Games wie RedOS, Jumper und Jumper2.</p>
+    <p>
+    Jumper2 
+    <a href="https://jumper-redjgames.netlify.app/" download="Download" style="color: blue; text-decoration: underline;">
+        Download
+    </a>
+    der Datei.
+    </p>
+
+    <p>
+    RedOS 
+    <a href="https://redjul2110.github.io/RedOS/" download="Download" style="color: blue; text-decoration: underline;">
+        Download
+    </a>
+    der Datei.
+    </p>
+
+    <p>
+    Controller Flight 
+    <a href="https://redjul2110.github.io/controller-flight/" download="Download" style="color: blue; text-decoration: underline;">
+        Download
+    </a>
+    der Datei.
+    </p>
+
+    <p>
+    Aktien Sim 
+    <a href="https://aktien-sim-redjgames.netlify.app/" download="Download" style="color: blue; text-decoration: underline;">
+        Download
+    </a>
+    der Datei.
+    </p>
+
+
   </div>
 
 </body>
