Fix casing in title and meta tags for consistency

--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RedJgames – Browser Games</title>
+  <title>RedJGames – Browser Games</title>
 
   <!-- Google & Bing Verifizierung -->
   <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4">
   <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263">
 
   <!-- SEO -->
-  <meta name="description" content="RedJgames – Kostenlose Browser Games und Online Games.">
-  <meta name="keywords" content="RedJgames, Free Games, Browser Games, Online Games, Games">
+  <meta name="description" content="RedJGames – Kostenlose Browser Games und Online Games.">
+  <meta name="keywords" content="RedJGames, Free Games, Browser Games, Online Games, Games">
   <meta name="robots" content="index, follow">
 
-  <!-- Favicon -->
-  <link rel="icon" href="https://raw.githubusercontent.com/Redjul2110/RedJGames/main/main.jpg" type="image/jpeg">
-
-  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,19 +21,17 @@
   <!-- Container -->
   <div class="container">
 
-    <!-- Pulsierender Kreis -->
+    <!-- Logo Text -->
+    <h1 class="logo-text">RedJGames</h1>
+
+    <!-- Button -->
+    <button id="continueBtn">Weiter zu RedJGames</button>
+
+    <!-- Loader -->
     <div class="loader"></div>
-
-    <!-- Titel & Text -->
-    <h1>Willkommen bei RedJgames</h1>
-    <p>Erlebe kostenlose Browser Games wie RedOS, Jumper und Jumper2.</p>
-
-    <!-- Weiter Button -->
-    <button id="continueBtn">Weiter zu RedJgames</button>
 
   </div>
 
-  <!-- Script für Button -->
   <script src="script.js"></script>
 </body>
 </html>
