Update logo text to include styled 'J'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <div class="container">
 
     <!-- Logo Text -->
-    <h1 class="logo-text">RedJGames</h1>
+    <h1 class="logo-text">
+      Red<span class="red-j">J</span>Games
+    </h1>
 
     <!-- Button -->
     <button id="continueBtn">Weiter zu RedJGames</button>
