--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta name="keywords" content="RedJGames, Free Games, Browser Games, Online Games, Games">
   <meta name="robots" content="index, follow">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="main.jpg">
+  <link rel="shortcut icon" type="image/jpeg" href="main.jpg">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
