--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <link rel="icon" href="./main.jpg" type="image/jpeg"/>
   <link rel="apple-touch-icon" href="./main.jpg"/>
 
-  <!-- Manifest -->
+  <!-- Manifest 
   <link rel="manifest" href="./manifest.json"/>
-
+  -->
   <!-- OpenGraph -->
   <meta property="og:title" content="RedJGames"/>
   <meta property="og:description" content="Kostenlose Browser Games von RedJGames."/>
