--- a/index.html
+++ b/index.html
@@ -7,41 +7,41 @@
   <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4"/>
   <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263"/>
 
-  <!-- Viewport -->
+  <!-- Viewport 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+  -->
   <!-- SEO -->
   <title>RedJGames – Browser Games</title>
   <meta name="description" content="RedJGames – Kostenlose Browser Games und Online Games."/>
   <meta name="keywords" content="RedJGames, Browser Games, Online Games, Free Games, Indie Games, Web Games"/>
   <meta name="robots" content="index, follow"/>
 
-  <!-- Mobile / PWA -->
+  <!-- Mobile / PWA 
   <meta name="mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <meta name="apple-mobile-web-app-title" content="RedJGames"/>
-
+  -->
   <!-- Favicon -->
   <link rel="icon" href="./main.jpg" type="image/jpeg"/>
   <link rel="apple-touch-icon" href="./main.jpg"/>
 
-  <!-- OpenGraph -->
+  <!-- OpenGraph 
   <meta property="og:title" content="RedJGames"/>
   <meta property="og:description" content="Kostenlose Browser Games von RedJGames."/>
   <meta property="og:image" content="./main.jpg"/>
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="RedJGames"/>
-
-  <!-- Twitter -->
+  -->
+  <!-- ... 
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="RedJGames"/>
   <meta name="twitter:description" content="Kostenlose Browser Games von RedJGames."/>
   <meta name="twitter:image" content="./main.jpg"/>
-
-  <!-- Styles & Script (gleiches Verzeichnis) -->
+  -->
+  <!-- Styles & Script (gleiches Verzeichnis) 
   <link rel="stylesheet" href="./index.css"/>
   <script type="module" src="./index.js"></script>
-
+  -->
 </head>
 
 <body>
