--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <meta name="twitter:description" content="Kostenlose Browser Games von RedJGames."/>
   <meta name="twitter:image" content="./main.jpg"/>
   -->
-  <!-- Styles & Script (gleiches Verzeichnis) 
+  <!-- Styles & Script (gleiches Verzeichnis) -->
   <link rel="stylesheet" href="./index.css"/>
   <script type="module" src="./index.js"></script>
-  -->
+  
 </head>
 
 <body>
