--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <meta name="keywords" content="RedJGames, Browser Games, Online Games, Free Games, Indie Games, Web Games"/>
   <meta name="robots" content="index, follow"/>
 
-  <!-- Mobile / PWA -->
+  <!-- Mobile / PWA 
   <meta name="mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <meta name="apple-mobile-web-app-title" content="RedJGames"/>
-  
+  -->
   <!-- Favicon -->
   <link rel="icon" href="./main.jpg" type="image/jpeg"/>
   <link rel="apple-touch-icon" href="./main.jpg"/>
