--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8"/>
 
+  <!-- Änderung --> <base href="/RedJGames/"> <!-- Änderung: Basis-Pfad für GitHub Pages hinzugefügt -->
+
   <!-- Google & Bing Verifizierung -->
   <meta name="google-site-verification" content="uorp-2o6cyD8nZlwgHHgDZ-kD1nvN3yCkjA3XuYJnv4"/>
   <meta name="msvalidate.01" content="8A100A9890A9AB172E8983E45432A263"/>
